@@ -18,6 +18,8 @@
  * Remove race condition on jacks editor page load (#1300).
  * Highlight name changes in email (#1297)
  * Time out calls to stitcher after 45 minutes using new `--timeout` option to stitcher. (#1234)
+ * Avoid looking at all aggregates when hitting DETAILS button on jacks 
+   app when there are no aggregates with resources (#1302)
 
 == 2.26 ==
  * Handle multi-valued attributes from Shibboleth (#740)
